--- a/Aula03/css/signup.css
+++ b/Aula03/css/signup.css
@@ -6,7 +6,6 @@
     --font: "Poppins", sans-serif; 
 }
 
-
 body{
     font-family: var(--font) 
 }
@@ -43,23 +42,23 @@ nav{
     display: flex;
     width: 95%;
     margin: auto;
-    margin-top: 140px;
+    margin-top: 120px;
 
 }
 
-.login{
+.signup{
     width: 100%;
     
 
     .input{
-        margin-top: 50px;
+        margin-top: 10px;
 
         label{
             font-size: 25px;
         }
 
         input{
-            width: 60%;
+            width: 80%;
             height: 30px;
             border: solid lightgray 1px;
             border-radius: 10px;
@@ -71,7 +70,7 @@ nav{
         margin-top: 50px;
         background-color:var(--back-color);
         color: white;
-        width: 8%;
+        width: 19%;
         height: 40px;
         border: solid var(--back-color) 1px;
         border-radius: 10px;
@@ -84,9 +83,10 @@ nav{
     }
 }
 
+
 .login-img{
     margin-left: auto;
-    margin-right: 500px;
+    margin-right: 200px;
     
     img{
         width: 130%;
