--- a/Aula03/css/index.css
+++ b/Aula03/css/index.css
@@ -13,28 +13,12 @@ body{
 
 nav{
     display: flex;
-}
-
-.nav-right{
-    display: flex;
-    margin-left: auto;
     gap: 70px;
 
     .nav-link{
         text-decoration: none;
         margin-right: 30px;
 
-
-    }
-
-}
-
-.nav-left{
-    display: flex;
-
-    .LW{
-        margin: 30px;
-        color: var(--color-text);
     }
 
 }
@@ -51,7 +35,7 @@ nav{
     width: 100%;
     
 
-    .input{
+    .input{ 
         margin-top: 50px;
 
         label{
@@ -90,5 +74,84 @@ nav{
     
     img{
         width: 130%;
+    }
+}
+
+@media only screen and (max-width: 1400px) and (min-width: 1024px) {
+
+
+    .login{
+
+        button{
+            width: 12%;
+        }
+
+    }
+    
+}
+
+@media only screen and (min-width: 769px) {
+
+    nav{
+        margin-left: auto;
+        width: fit-content;
+    }
+
+    .login-img{
+        margin-right: 0px;
+
+        img{
+            width: 95%;
+        }
+    }
+
+}
+
+
+@media only screen and (max-width: 768px) {
+
+      body{
+        margin: 0px;
+    }
+
+    .body{
+        display: block;
+        margin-top: 10px;
+    }
+
+    nav{
+        display: block;
+        background-color: #5023f3;
+
+        .nav-link{
+            color: rgb(255, 250, 250);
+        }
+
+        
+
+    }
+
+    .login-img{
+        margin-right: 0px;
+
+        img{
+            display: none;
+        }
+    }
+
+    .login{
+        
+        button{
+            width: 100%;    
+        }
+
+        .input{
+            margin-top: 30px;
+
+            input{
+                width: 90%;
+            }
+
+        }
     }
 }
