update the login page

--- a/Aula04_Prova/css/login.css
+++ b/Aula04_Prova/css/login.css
@@ -59,7 +59,7 @@ nav{
 
         h4{
             margin-top: 1px;
-            color: #c5c4c9;
+            color: #6e6a6a;
         }
 
         form{
@@ -140,7 +140,7 @@ nav{
     }
 
     .login-img{
-        height: 903px;
+        height: 853px;
         margin-right: 0px;
 
         img{
